z-index fixes

--- a/styles.scss
+++ b/styles.scss
@@ -39,12 +39,12 @@ header {
     position: fixed;
     top: 0;
     right: 0;
-    // z-index: 0;
+    z-index: 0;
 }
 
 .filter {
     backdrop-filter: blur(2px);
-    z-index: 0;
+    z-index: 1;
 }
 
 nav {
@@ -56,13 +56,13 @@ nav {
   justify-content: space-around;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 
   li {
     display: inline-block;
     text-align: center;
-    padding: 0px 20px;
-    padding-top: 10px;
+    padding: 0px 10px;
+    padding-top: 0px;
 
     a {
       color: $text-color;
